objects/CaseView__c.object
<CustomObject>
    <fields>
        <fullName>Criteria__c</fullName>
        <label>Criteria</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ExternalId__c</fullName>
        <description>Lanyon Source Record Id</description>
        <externalId>true</externalId>
        <label>ExternalId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ViewLabel__c</fullName>
        <label>View Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ViewName__c</fullName>
        <label>View Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Case View</label>
    <nameField>
        <displayFormat>CV-{0000}</displayFormat>
        <label>Case View Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Views</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Product_Enhancements_CaseView</fullName>
        <filterScope>Queue</filterScope>
        <label>Product Enhancements</label>
        <queue>Product_Enhancements</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
</CustomObject>